fix some errors and improve the index page

--- a/recipes/mac-n-cheese.html
+++ b/recipes/mac-n-cheese.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Man n Cheese</h1>
-    <img src="images/hamburguer.jpg" alt="hamburguer image">
+    <img src="images/mac-n-cheese.jpg" alt="hamburguer image">
     <h2>Description</h2>
     <p>The traditional Riq Mac n Cheese</p>
     <h2>Ingredients:</h2>
