--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Riq recipes</title>
 </head>
 <body>
     <h1>Odin recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
-    <a href="./recipes/hamburguer.html">Hamburger</a>
-    <a href="./recipes/mac-n-cheese.html">Man n cheese</a>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/hamburguer.html">Hamburger</a></li>
+        <li><a href="./recipes/mac-n-cheese.html">Man n cheese</a></li>
+    </ul>
 </body>
 </html>
