Update the site with some css and fix some errors

--- a/recipes/hamburguer.html
+++ b/recipes/hamburguer.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hamburger recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
-<body>
-    <h1>Hamburger</h1>
-    <img src="images/hamburguer.jpg" alt="hamburguer image">
+<body class="bodystyle">
+    <h1 class="title">Hamburger</h1>
+    <img class="food-image" src="images/hamburguer.jpg" alt="hamburguer image">
+    <br>
+    <hr class="hr-style">
     <h2>Description</h2>
     <p>The traditional Riq hamburger</p>
+    <br>
+    <hr class="hr-style">
     <h2>Ingredients:</h2>
     <ul>
         <li>Minced meat</li>
@@ -23,6 +28,8 @@
         <li>ketchup</li>
         <li>mayo</li>
     </ul>
+    <br>
+    <hr class="hr-style">
     <h2>Steps</h2>
     <ol>
         <li>Cut a onion and some garlic.</li>
