--- a/recipes/mac-n-cheese.html
+++ b/recipes/mac-n-cheese.html
@@ -5,18 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Man n Cheese recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
-<body>
-    <h1>Man n Cheese</h1>
-    <img src="images/mac-n-cheese.jpg" alt="hamburguer image">
+<body class="bodystyle">
+    <h1 class="title">Man n Cheese</h1>
+    <img class="food-image" src="images/mac-n-cheese.jpg" alt="hamburguer image">
+    <br>
+    <hr class="hr-style">
     <h2>Description</h2>
     <p>The traditional Riq Mac n Cheese</p>
+    <br>
+    <hr class="hr-style">
     <h2>Ingredients:</h2>
     <ul>
         <li>noodles</li>
         <li>cheese</li>
         <li>milk</li>
     </ul>
+    <br>
+    <hr class="hr-style">
     <h2>Steps</h2>
     <ol>
         <li>put the noodles in boiling water</li>
