--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
-<body>
-    <h1>Lasagna</h1>
-    <img src="images/lasagna.jpg" alt="lasagna image">
+<body class="bodystyle">
+    <h1 class="title">Lasagna</h1>
+    <img class="food-image" src="images/lasagna.jpg" alt="lasagna image">
+    <br>
+    <hr class="hr-style">
     <h2>Description</h2>
     <p>The traditional Riq and Carol bolognese lasagna</p>
+    <br>
+    <hr class="hr-style">
     <h2>Ingredients:</h2>
     <ul>
         <li>Minced meat</li>
@@ -24,6 +29,8 @@
         <li>tomato sauce</li>
         <li>lasagna dough</li>
     </ul>
+    <br>
+    <hr class="hr-style">
     <h2>Steps</h2>
     <ol>
         <li>Cut a onion, half of a bell pepper and some garlic.</li>
