--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Riq recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <h1>Odin recipes</h1>
-    <ul>
+<body class="bodystyle">
+    <h1 class="title">Odin recipes</h1>
+    <img class="ratgif" src="./recipes/images/ratatouille.gif" alt="ratatouille cooking">
+    <br>
+    <hr class="hr-style">
+    <br>
+    <ul class="ul-style">
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <br>
         <li><a href="./recipes/hamburguer.html">Hamburger</a></li>
-        <li><a href="./recipes/mac-n-cheese.html">Man n cheese</a></li>
+        <br>
+        <li><a href="./recipes/mac-n-cheese.html">Mac n cheese</a></li>
     </ul>
 </body>
 </html>
